[package]
name = "dexcord"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"
base64 = "0.22"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }

anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.13"

# Optimize release binary
[profile.release]
opt-level = 2
lto = "fat"
# Optimize release dependencies
[profile.release.package."*"]
opt-level = 2
